--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'realm-android'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    buildToolsVersion '26.0.3'
     defaultConfig {
         applicationId "uk.co.garyhomewood.planespotter"
         minSdkVersion 23
@@ -23,6 +23,9 @@ android {
     }
     packagingOptions {
         exclude 'META-INF/rxjava.properties'
+    }
+    androidExtensions {
+        experimental = true
     }
 }
 
