--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
 
         <activity
             android:name=".gallery.GalleryActivity"
+            android:theme="@style/GalleryTheme"
             android:parentActivityName=".feed.FeedActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
